# eris

./: .gitignore  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: publish.yaml
docs/: api.md  outputs.md  overview.md
src/eris/: _version.py  alignment.py  cli.py  graph.py  interval.py  io.py  pipeline.py
