[project]
name = "pyeris"  # "eris" is taken on pypi
authors = [{name = "Tom Stanton", email = "tomdstanton@gmail.com"}]
description = "Graph-aware contextual annotation of targeted genomic features"
dependencies = ["numpy>=2.4", "numba>=0.65", "mappy>=2.3", "pyfgs>=0.0.1", "biopython>=1.87"]
requires-python = ">=3.11"
license = {file = "LICENSE"}
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["bioinformatics", "annotation", "graph", "pangenome", "bacteria"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

[dependency-groups]
test = ["pytest", "pytest-cov"]
docs = ["zensical>=0.0.33", "mkdocstrings[python]"]
dev = [{ include-group = "test" }, { include-group = "docs" }]

[project.urls]
Homepage = "https://tomdstanton.github.io/eris/"
Repository = "https://github.com/tomdstanton/eris"
Documentation = "https://tomdstanton.github.io/eris/"

[project.scripts]
eris = "eris.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eris"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/eris/_version.py"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add standard flags (e.g., -ra shows an extra summary of failed/skipped tests)
addopts = "-ra -v"
# Ensure the src directory is in the pythonpath so tests can import eris
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["YTT", "S", "B", "A", "C4", "T10", "SIM", "I", "C90", "E", "W", "F", "PGH", "UP", "RUF", "TRY"]
ignore = ["E501", "E731", ]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
